# WISEMLOps-API-Server

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.prod  README.md  application.yaml  docker-compose.yaml  product.Dockerfile  pyproject.toml  requirements.txt  setup.cfg
app/: crud.py  dependencies.py  main.py  models.py  version.py
app/client/: kubernetes_client.py
app/internal/: admin.py
app/routers/: cluster.py  items.py  users.py
ml-frameworks/mxnet/: Dockerfile  README.md
monolith/src/: __init__.py
src/: __init__.py  config.py  crud.py  dependencies.py  exceptions.py  main.py  models.py  response.py  schemas.py  service.py  version.py
src/cluster/: __init__.py  client.py  config.py  exceptions.py  models.py  router.py  service.py  utils.py
src/common_module/: __init__.py  config.py  router.py  service.py
src/crds/: __init__.py  client.py  config.py  models.py  router.py  service.py  utils.py
src/kfp_module/: __init__.py  config.py  exceptions.py  router.py  schemas.py  service.py
src/kserve_client/: __init__.py  router.py  utils.py
src/kserve_module/: __init__.py  config.py  exceptions.py  router.py  schemas.py  service.py
src/kubernetes_client/: __init__.py  client.py  config.py  models.py  utils.py
src/kubernetes_module/: __init__.py  client.py  config.py  exceptions.py  resource.py  utils.py
src/minio_client/: config.py  models.py  router.py  service.py  utils.py
src/minio_module/: __init__.py  config.py  exceptions.py  router.py  schemas.py  service.py
src/mlflow_client/: __init__.py  (+5 more)
tests/: test_main.py
(+121 files in other folders)
