[tool.poetry]
name = "python-fastapi-template"
version = "1.0.0"
description = "DE Team Python FastAPI Template"
authors = ["Seoyeon Park <sally9476@wisenut.co.kr>"]
readme = "README.md"
#packages = [{include = "python_fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
aiohttp = "^3.8.4"
requests = "^2.28.2"
pydantic = "^1.10.7"
pyyaml = "^6.0"
loguru = "^0.6.0"
httpx = "^0.23.3"
SQLAlchemy = "^2.0.8"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "W"
max-line-length = 125
max-complexity = 10
exclude = ".git,__pycache__,docs,venv,tests,build,dist"