[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel >= 0.37.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "MLOps-API"
version = "1.0.0"
description = "AI Platform Team's MLOps API"
authors = [{name = "Seungwhan Yoo", email = "yswhan@wisenut.co.kr"}, {name = "Junhyeok Choi", email = "junwork@wisenut.co.kr"}]
readme = "README.md"
requires-python = "<3.10"

[tool.flake8]
ignore = "W"
max-line-length = 125
max-complexity = 10
exclude = ".git,__pycache__,docs,venv,tests,build,dist"